# zephyr-dw3000-examples

./: .gitmodules  CMakeLists.txt  README.md  build-all.sh  prj.conf  sample.yaml
MAC_802_15_4/: mac_802_15_4.c  mac_802_15_4.h
MAC_802_15_8/: mac_802_15_8.c  mac_802_15_8.h
boards/arm/minew_ms151f7/: Kconfig.board  Kconfig.defconfig  minew_ms151f7.dts  minew_ms151f7.yaml  minew_ms151f7_defconfig
examples/ex_00a_reading_dev_id/: read_dev_id.c
examples/ex_01a_simple_tx/: simple_tx.c
examples/ex_01b_tx_sleep/: tx_sleep.c  tx_sleep_idleRC.c
examples/ex_01c_tx_sleep_auto/: tx_sleep_auto.c
examples/ex_01d_tx_timed_sleep/: tx_timed_sleep.c
examples/ex_01e_tx_with_cca/: tx_with_cca.c
examples/ex_01g_simple_tx_sts_sdc/: simple_tx_sts_sdc.c
examples/ex_01h_simple_tx_pdoa/: simple_tx_pdoa.c
examples/ex_01i_simple_tx_aes/: simple_tx_aes.c
examples/ex_02a_simple_rx/: simple_rx.c  simple_rx_nlos.c
examples/ex_02c_rx_diagnostics/: rx_diagnostics.c
examples/ex_02d_rx_sniff/: rx_sniff.c
examples/ex_02e_rx_dbl_buff/: double_buffer_rx.c
examples/ex_02f_rx_with_crystal_trim/: rx_with_xtal_trim.c
examples/ex_02g_simple_rx_sts_sdc/: simple_rx_sts_sdc.c
examples/ex_02h_simple_rx_pdoa/: simple_rx_pdoa.c
examples/ex_02i_simple_rx_aes/: simple_rx_aes.c
examples/ex_03a_tx_wait_resp/: tx_wait_resp.c
examples/ex_03b_rx_send_resp/: rx_send_resp.c
examples/ex_03d_tx_wait_resp_interrupts/: tx_wait_resp_int.c
examples/ex_04a_cont_wave/: continuous_wave.c
examples/ex_04b_cont_frame/: continuous_frame.c
examples/ex_05a_ds_twr_init/: ds_twr_initiator.c  ds_twr_initiator_sts.c
examples/ex_05b_ds_twr_resp/: ds_twr_responder.c  ds_twr_responder_sts.c
examples/ex_05c_ds_twr_init_sts_sdc/: ds_twr_sts_sdc_initiator.c
examples/ex_05d_ds_twr_resp_sts_sdc/: ds_twr_sts_sdc_responder.c
examples/ex_06a_ss_twr_initiator/: ss_twr_initiator.c  ss_twr_initiator_sts.c  ss_twr_initiator_sts_no_data.c
examples/ex_06b_ss_twr_responder/: ss_twr_responder.c  ss_twr_responder_sts.c  ss_twr_responder_sts_no_data.c
examples/ex_06e_AES_ss_twr_initiator/: ss_aes_twr_initiator.c
examples/ex_06f_AES_ss_twr_responder/: ss_aes_twr_responder.c
examples/ex_07a_ack_data_tx/: ack_data_tx.c
examples/ex_07b_ack_data_rx/: ack_data_rx.c
examples/ex_07c_ack_data_rx_dbl_buff/: ack_data_rx_dbl_buff.c
examples/ex_11a_spi_crc/: spi_crc.c
examples/ex_13a_gpio/: gpio_example.c
examples/ex_14_otp_write/: otp_write.c
examples/ex_15_le_pend/: le_pend_rx.c  le_pend_tx.c
examples/ex_16_pll_cal/: pll_cal.c
examples/ex_17_bw_cal/: bandwidth_calibration.c
examples/ex_18_timer/: timer_example.c
examples/ex_19_tx_power_adjustment/: tx_power_adjustment_example.c
examples/ex_20_simple_aes/: simple_aes.c
examples/examples_info/: example_info.c  examples_defines.h
examples/shared_data/: shared_defines.h  shared_functions.c  shared_functions.h
platform/: config_options.c  config_options.h  deca_spi.h  example_selection.h  port.c  port.h
src/: main.c
